server/kubernetes/base/jseries.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: jseries
  labels:
    name: jseries
  annotations:
    written.by: cstone

# apiVersion: v1
# kind: Namespace
# metadata:
#   name: open-webui
