server/kubernetes/base/ollama-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: ollama-svc
  namespace: jseries
spec:
  ports:
  - name: ollama-port
    port: 11434
    protocol: TCP
  selector:
    app: ollama
  type: NodePort

# apiVersion: v1
# kind: Service
# metadata:
#   name: ollama-service
#   namespace: open-webui
# spec:
#   selector:
#     app: ollama
#   ports:
#   - protocol: TCP
#     port: 11434
#     targetPort: 11434
