server/kubernetes/base/postgres-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres-svc
  namespace: jseries
spec:
  ports:
  - name: postgres-port
    port: 5432
    protocol: TCP
    targetPort: 5432
  selector:
    app: postgres
  type: NodePort
