server/kubernetes/base/jseries-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: open-webui-ingress
#  namespace: open-webui
  namespace: jseries
  #annotations:
    # Use appropriate annotations for your Ingress controller, e.g., for NGINX:
    # nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: open-webui.minikube.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: open-webui-service
            port:
              number: 8080

# apiVersion: networking.k8s.io/v1
# kind: Ingress
# metadata:
#   name: ingress-resource
#   namespace: jseries
#   annotations:
#     nginx.ingress.kubernetes.io/ssl-redirect: "false"
#     nginx.ingress.kubernetes.io/use-regex: "true"
#     nginx.ingress.kubernetes.io/configuration-snippet: proxy_set_header X-Script-Name /pgadmin;
# spec:
#   ingressClassName: nginx
#   rules:
#   - http:
#       paths:
#       - path: /pgadmin(/|$)(.*)
#         pathType: Prefix
#         backend:
#           service:
#             name: pgadmin
#             port:
#               number: 30200
